# pas-recon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
.wrangler/cache/: pages.json  wrangler-account.json
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: commands.rs  main.rs  update.rs
crates/engine/: Cargo.toml
crates/engine/fixtures/: emr_basic.csv  emr_dirty.csv  pas_basic.csv  pas_duplicates.csv
crates/engine/src/: date.rs  dedup.rs  detect.rs  lib.rs  model.rs  parse.rs  phn.rs  reconcile.rs
crates/engine/tests/: date_test.rs  dedup_test.rs  detect_test.rs  parse_test.rs  phn_test.rs  reconcile_test.rs
docs/: release-setup.md  spreadsheet-formulas.md
docs/superpowers/plans/: 2026-07-14-pas-recon-app.md  2026-07-15-smart-file-ingestion.md  2026-07-16-click-to-sort.md
docs/superpowers/specs/: 2026-07-14-pas-recon-app-design.md  2026-07-15-smart-file-ingestion-design.md  2026-07-16-click-to-sort-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ColumnPicker.tsx  DropZone.tsx  EmptyState.tsx  FileConfirm.tsx  ListTabs.tsx  PatientTable.tsx  Sidebar.tsx  StatusBreakdown.tsx  SummaryCard.tsx  UpdateToast.tsx
frontend/src/styles/: app.css
